<resources>
    <string name="app_name">UserApplication</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="create_account">Create Account</string>
    <string name="student_id">Student ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="send">Send</string>
    <string name="enter_receiver_id">Enter Receiver ID</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="title_activity_add_money">AddMoneyActivity</string>
    <string name="tab_text_1">Pay With Mobile Money</string>
    <string name="tab_text_2">Pay With Card</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="register_now"><u>REGISTER NOW</u></string>
    <string name="login_now"><u>Log In</u></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mtn">MTN</string>
    <string name="vodafone">Vodafone</string>
    <string name="airtel_tigo">Airtel/Tigo</string>
    <string name="choose_network">Choose Network</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="a_6_digit_code_was_sent_to_your_phone_please_enter_it_below">A 6 digit code was sent to your phone Please Enter It Below</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="current_balance">Current Balance</string>
    <string name="account_balance">Account Balance</string>
    <string name="add_money">Load Money</string>
    <string name="send_money">Send Money</string>
    <string name="check_transaction_history">Check Transaction History</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_transactions_made">No transactions made</string>
</resources>