<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_account"
        android:textColor="#404040"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="20dp"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <EditText
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.568"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName"
                app:layout_constraintVertical_bias="0.0"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10dp" />


            <EditText
                android:id="@+id/id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/student_id"
                android:inputType="number"
                android:maxLength="8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.568"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password2"
                app:layout_constraintVertical_bias="0.0"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/id"
                android:drawablePadding="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.619"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32999998"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password1"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id"
                app:layout_constraintVertical_bias="0.0"
                android:fontFamily="@font/montserrat"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_have_an_account_log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register"
            app:layout_constraintVertical_bias="0.41000003" />

        <TextView
            android:id="@+id/toLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_now"
            android:textColor="@color/gradient_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/not_so_round_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toRegisterPage" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>


