<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMoneyActivity"
    android:background="@drawable/gradientmain">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mtn" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="97dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView4"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintEnd_toStartOf="@id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vod" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.96"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tig" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <ProgressBar
                android:id="@+id/progressBar3"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="101dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/pay_momo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <TextView
                android:id="@+id/tv_payment_prompt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/choose_network"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_momo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:padding="16dp"
                android:id="@+id/enter_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_momo"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@id/mtn"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_prompt2"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/mtn"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/mtn" />

                <RadioButton
                    android:id="@+id/vod"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/vodafone" />

                <RadioButton
                    android:id="@+id/tgo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/airtel_tigo" />
            </RadioGroup>

            <Button
                android:id="@+id/pay_momo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/not_so_round_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/pay"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.98"
                android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>