<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMoneyActivity"
    android:background="@drawable/gradientmain">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="215dp"
                android:layout_height="115dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/card" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="101dp"
                android:layout_height="24dp"
                android:layout_marginBottom="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btn_send_money_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26999998">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_amount"
                app:layout_constraintVertical_bias="0.25"
                app:cardCornerRadius="20dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_payment_prompt3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/card_details"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_card_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_payment_prompt3"
                        app:layout_constraintVertical_bias="0.00999999">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/card_number"
                            android:inputType="number|text"
                            android:maxLength="19" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_card_cvv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        app:boxBackgroundColor="#FFFFFF"
                        app:boxBackgroundMode="outline"
                        app:boxCollapsedPaddingTop="0dp"
                        app:layout_constraintLeft_toRightOf="@id/til_card_expiry"

                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_card_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/cvv"
                            android:inputType="number"
                            android:maxLength="3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_card_expiry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        app:boxBackgroundColor="#FFFFFF"
                        app:boxBackgroundMode="outline"
                        app:boxCollapsedPaddingTop="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"

                        app:layout_constraintRight_toLeftOf="@id/til_card_cvv"
                        app:layout_constraintTop_toBottomOf="@id/til_card_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/card_expiry"
                            android:inputType="text|number"
                            android:maxLength="5" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btn_send_money_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/not_so_round_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/pay"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.98"
                android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>




